# project_api_data_orchestrator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml
deployment/: namespace.yaml  webapp-deployment.yaml  webapp-service.yaml
notebooks/: nfl_extract.ipynb
src/project_api_data_orchestrator/: main.py
src/project_api_data_orchestrator/api/: jobs.py
src/project_api_data_orchestrator/core/: config.py
src/project_api_data_orchestrator/db/: connection.py  schema.sql
src/project_api_data_orchestrator/jobs/fantasy_football/: update_players_data.py  update_players_depthchart.py
src/project_api_data_orchestrator/utils/: job_runner.py
